--- a/Insomnia.yaml
+++ b/Insomnia.yaml
@@ -10,7 +10,7 @@ collection:
     meta:
       id: fld_1bea599113054baaaaa56cf9371883bf
       created: 1750012727351
-      modified: 1755430697103
+      modified: 1755434138543
       sortKey: -1750012727351
       description: ""
     children:
@@ -1290,7 +1290,7 @@ collection:
         meta:
           id: req_467eb15f86884c0e8bb9aefd308f0ffc
           created: 1751505201133
-          modified: 1755430730801
+          modified: 1755446822839
           isPrivate: false
           description: ""
           sortKey: -1754257013010
@@ -1301,7 +1301,7 @@ collection:
             {
             	"payment_method" : "debt",
             	"patient_id" : 1,
-            	"total_retail_price" : 403.5,
+            	"total_retail_price" : 215.66,
             	"insurance" : {
             		"patient_id" : 1
             	},
@@ -1778,6 +1778,38 @@ collection:
             send: true
             store: true
           rebuildPath: true
+  - name: Debt
+    meta:
+      id: fld_517b7536da61469d96949f74fe5b44ac
+      created: 1755447606631
+      modified: 1755447606631
+      sortKey: -1755447606631
+      description: ""
+    children:
+      - url: "{{ _.localhost }}/api/v1/pay-debt/1"
+        name: Pay Debt
+        meta:
+          id: req_f2cd94fe106049b3af5e39dc6f1a317d
+          created: 1755447611069
+          modified: 1755447772273
+          isPrivate: false
+          description: ""
+          sortKey: -1755447772191
+        method: POST
+        headers:
+          - name: User-Agent
+            value: insomnia/11.4.0
+        authentication:
+          type: bearer
+          token: "{{ _.auth_token }}"
+        settings:
+          renderRequestBody: true
+          encodeUrl: true
+          followRedirects: global
+          cookies:
+            send: true
+            store: true
+          rebuildPath: true
   - url: "{{ _.localhost }}/"
     name: Test
     meta:
@@ -1807,14 +1839,14 @@ cookieJar:
   meta:
     id: jar_faed63c6158848849117aab01c96a3fe
     created: 1753317367158
-    modified: 1755430697100
+    modified: 1755434138542
 environments:
   name: Base Environment
   meta:
     id: env_232c3e4eef1f4e8e8c88033ca2d25fa6
     created: 1749705478341
-    modified: 1755430697101
+    modified: 1755434138542
     isPrivate: false
   data:
-    auth_token: 1|ynTWGtct0yce4IG86WzlAVXsxMcGxie7fuDeSZfd89c232c4
+    auth_token: 1|FBjTIDIu0IF32CTByjb12PhSR7Zq45INGnSk80HGed8ae2bb
     localhost: 127.0.0.1:8000
